fix: postman tests 6